fsd refactoring
